Fixed width issue on smaller screens

--- a/PersonalBlazorWebApp/Components/Pages/About.razor.css
+++ b/PersonalBlazorWebApp/Components/Pages/About.razor.css
@@ -5,4 +5,5 @@
     top: 0;
     background-color: floralwhite;
     z-index: -1;
+    flex-wrap: wrap;
 }
